<resources>
    <string name="coin_text_1">Bitcoin</string>
    <string name="coin_text_2">Ethereum</string>
    <string name="coin_text_3">Tether</string>
    <string name="app_name">Crypto App</string>
    <string name="btc_img">Bitcoin Image</string>
    <string name="ethereum_img">Ethereum Image</string>
    <string name="usdt_img">Tether Image</string>
    <string name="avax_img">Aavalanche Image</string>
    <string name="doge_img">DogeCoin Image</string>
    <string name="dot_img">Polkadot Image</string>
    <string name="okb_img">Okb Image</string>
    <string name="qnt_img">Quant Image</string>
    <string name="rune_img">Thorchain Image</string>
    <string name="tusd_img">TrueUsd Image</string>
    <string name="btc_btn">See BTC Details</string>
    <string name="eth_btn">See ETH Details</string>
    <string name="usdt_btn">See USDT Details</string>
    <string name="header_text">Header Text</string>
    <string name="description_text">Description Text</string>
    <string name="active_text">Active Text</string>
    <string name="tag_text">Tags</string>
    <string name="team_members_text">Team Members</string>
    <string name="tag_item_text">Tag Text</string>
    <string name="deaf_string">punetialteurechi</string>
    <string name="member_name">Member Name</string>
    <string name="member_position">Member Position</string>
    <string name="coin_id">Coin ID</string>
    <string name="coin_column_2">Coin Column 2</string>
    <string name="coin_column_1">Coin Column 1</string>
    <string name="hello_first_fragment" />
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="enter_credentials">Please enter your credentials</string>
    <string name="login">Login</string>
    <string name="out_in_cinemas">Out in cinemas</string>
    <string name="movie_stars">Stars</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="airing_today">Airing Today</string>
    <string name="lvMustWatch">Must Watch</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="search_icon">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>